// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`whiteSpace renders 0 1`] = `
Array [
  .c0 {
  white-space: 0;
}

<div
    className="c0"
  />,
  .c0 {
  white-space: 0;
}

<div
    className="c0"
  />,
  .c0 {
  white-space: 0;
}

<div
    className="c0"
  />,
  .c0 {
  white-space: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpace renders function 1`] = `
Array [
  .c0 {
  white-space: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  white-space: has;
}

<div
    className="c0"
  />,
  .c0 {
  white-space: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  white-space: has;
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpace renders invalid theme path 1`] = `
Array [
  .c0 {
  white-space: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  white-space: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  white-space: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  white-space: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpace renders negative number 1`] = `
Array [
  .c0 {
  white-space: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  white-space: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  white-space: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  white-space: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpace renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  white-space: July;
}

@media screen and (min-width:November) {
  .c0 {
    white-space: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    white-space: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  white-space: July;
}

@media screen and (min-width:November) {
  .c0 {
    white-space: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    white-space: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  white-space: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    white-space: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    white-space: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  white-space: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    white-space: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    white-space: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpace renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    white-space: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    white-space: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    white-space: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    white-space: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    white-space: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    white-space: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    white-space: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    white-space: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpace renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  white-space: July;
}

@media May {
  .c0 {
    white-space: August;
  }
}

@media April {
  .c0 {
    white-space: September;
  }
}

@media January {
  .c0 {
    white-space: November;
  }
}

@media April {
  .c0 {
    white-space: August;
  }
}

@media June {
  .c0 {
    white-space: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  white-space: July;
}

@media May {
  .c0 {
    white-space: August;
  }
}

@media April {
  .c0 {
    white-space: September;
  }
}

@media January {
  .c0 {
    white-space: November;
  }
}

@media April {
  .c0 {
    white-space: August;
  }
}

@media June {
  .c0 {
    white-space: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  white-space: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    white-space: November;
  }
}

@media April {
  .c0 {
    white-space: January;
  }
}

@media January {
  .c0 {
    white-space: December;
  }
}

@media April {
  .c0 {
    white-space: April;
  }
}

@media June {
  .c0 {
    white-space: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  white-space: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    white-space: November;
  }
}

@media April {
  .c0 {
    white-space: January;
  }
}

@media January {
  .c0 {
    white-space: December;
  }
}

@media April {
  .c0 {
    white-space: April;
  }
}

@media June {
  .c0 {
    white-space: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpace renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    white-space: July;
  }
}

@media April {
  .c0 {
    white-space: August;
  }
}

@media January {
  .c0 {
    white-space: September;
  }
}

@media April {
  .c0 {
    white-space: November;
  }
}

@media June {
  .c0 {
    white-space: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    white-space: July;
  }
}

@media April {
  .c0 {
    white-space: August;
  }
}

@media January {
  .c0 {
    white-space: September;
  }
}

@media April {
  .c0 {
    white-space: November;
  }
}

@media June {
  .c0 {
    white-space: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    white-space: January;
  }
}

@media April {
  .c0 {
    white-space: December;
  }
}

@media January {
  .c0 {
    white-space: April;
  }
}

@media April {
  .c0 {
    white-space: May;
  }
}

@media June {
  .c0 {
    white-space: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    white-space: January;
  }
}

@media April {
  .c0 {
    white-space: December;
  }
}

@media January {
  .c0 {
    white-space: April;
  }
}

@media April {
  .c0 {
    white-space: May;
  }
}

@media June {
  .c0 {
    white-space: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpace renders postitive number 1`] = `
Array [
  .c0 {
  white-space: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  white-space: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  white-space: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  white-space: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpace renders string 1`] = `
Array [
  .c0 {
  white-space: July;
}

<div
    className="c0"
  />,
  .c0 {
  white-space: July;
}

<div
    className="c0"
  />,
  .c0 {
  white-space: June;
}

<div
    className="c0"
  />,
  .c0 {
  white-space: June;
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpace renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`whiteSpace renders valid theme path 1`] = `
Array [
  .c0 {
  white-space: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  white-space: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  white-space: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  white-space: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
